--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -30,7 +30,7 @@ http {
     default_type application/octet-stream;
 
     server {
-        listen 8080;
+        listen 80;
 
         location / {
             # Disable cache
@@ -50,7 +50,7 @@ http {
             }
 
             types {
-                application/dash+xml mpd;
+                # application/dash+xml mpd;
                 application/vnd.apple.mpegurl m3u8;
                 video/mp2t ts;
             }
