--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -1,3 +1,4 @@
+user  www-data;
 worker_processes  auto;
 events {
     worker_connections  1024;
@@ -30,7 +31,7 @@ http {
     default_type application/octet-stream;
 
     server {
-        listen 80;
+        listen 8080;
 
         location / {
             # Disable cache
