add research cods

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -1,62 +1,72 @@
-user  www-data;
-worker_processes  auto;
-events {
-    worker_connections  1024;
-}
-
-# RTMP configuration
+user nginx nginx;
+worker_processes auto;
+rtmp_auto_push on;
+events {}
 rtmp {
     server {
-        listen 1935; # Listen on standard RTMP port
-        chunk_size 4000;
+        listen 1935;
+        listen [::]:1935 ipv6only=on;
 
-        application show {
+        application live {
             live on;
-            # Turn on HLS
+            record off;
+
             hls on;
-            hls_path /mnt/hls/;
-            hls_fragment 3;
-            hls_playlist_length 60;
-            # disable consuming the stream from nginx as rtmp
-            deny play all;
+            hls_path /tmp/hls;
+            hls_nested on;
+            hls_fragment 2s;
+            hls_playlist_length 16s;
+
+            dash on;
+            dash_path /tmp/dash;
+            dash_nested on;
+            dash_fragment 2s;
+            dash_playlist_length 16s;
+
+            # deny play all;
         }
     }
 }
 
 http {
     sendfile off;
-    tcp_nopush on;
-    # aio on;
+    aio on;
     directio 512;
     default_type application/octet-stream;
 
     server {
-        listen 8080;
+        listen      8080;
 
-        location / {
-            # Disable cache
-            add_header 'Cache-Control' 'no-cache';
+        # This URL provides RTMP statistics in XML
+        location /stat {
+            rtmp_stat all;
 
-            # CORS setup
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Expose-Headers' 'Content-Length';
+            # Use this stylesheet to view XML as web page
+            # in browser
+            rtmp_stat_stylesheet stat.xsl;
+        }
 
-            # allow CORS preflight requests
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain charset=UTF-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
+        location /stat.xsl {
+            # XML stylesheet to view RTMP stats.
+            # Copy stat.xsl wherever you want
+            # and put the full directory path here
+            root /path/to/stat.xsl/;
+        }
 
+        location /hls {
+            # Serve HLS fragments
             types {
-                # application/dash+xml mpd;
                 application/vnd.apple.mpegurl m3u8;
                 video/mp2t ts;
             }
+            root /tmp;
+            add_header Cache-Control no-cache;
+        }
 
-            root /mnt/;
+        location /dash {
+            # Serve DASH fragments
+            root /tmp;
+            add_header Cache-Control no-cache;
         }
     }
 }
