--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,40 +1,58 @@
-# from ubuntu
-FROM ubuntu:20.04
-RUN apt-get update
+FROM alpine:latest
 
-# install nginx for rtmp
-RUN apt-get install -y build-essential libpcre3 libpcre3-dev libssl-dev
-RUN apt-get install -y wget
-RUN apt-get install -y unzip
+LABEL maintainer="NGINX-MEDIA_SERVER maintainer <kjune1236@gmail.com>"
 
-RUN wget http://nginx.org/download/nginx-1.18.0.tar.gz
-RUN tar -xf nginx-1.18.0.tar.gz
-RUN wget https://github.com/arut/nginx-rtmp-module/archive/master.zip
-RUN unzip master.zip
-RUN mv nginx-rtmp-module-master nginx-rtmp-module
+# versions of nginx and nginx-rtmp-module to use
+ENV NGINX_VERSION 1.18.0
+ENV RTMP_MODULE_VERSION 1.2.1
 
-RUN apt-get install -y zlib1g zlib1g-dev
-WORKDIR /nginx-1.18.0
-RUN ./configure --with-http_ssl_module --add-module=/nginx-rtmp-module
-RUN make -j 1
-RUN make install
+RUN set -x \
+    # create nginx user/group
+    && addgroup -g 101 -S nginx \
+    && adduser -S -D -H -u 101 -h /var/cache/nginx -s /sbin/nologin -G nginx -g nginx nginx \
+    # install binaries & other dependencies from the published packaging sources
+    && apk --no-cache add gcc libc-dev linux-headers pcre-dev zlib-dev ca-certificates openssl libressl-dev make \
+    && rm -rf /var/cache/apk/*
 
-ARG DEBIAN_FRONTEND=noninteractive
-RUN apt-get install -y ffmpeg
+# create working directory to build packages then go into.
+RUN mkdir -p /tmp/build && cd /tmp/build
 
-# run nginx
-RUN apt-get install -y net-tools
-COPY ./conf/nginx.conf /usr/local/nginx/conf/nginx.conf
-CMD ["/usr/local/nginx/sbin/nginx", "-g", "daemon off;"]
+# download & decompress nginx & nginx-rtmp-module .tar.gz(gzipped tarball)
+RUN wget -O nginx-${NGINX_VERSION}.tar.gz https://nginx.org/download/nginx-${NGINX_VERSION}.tar.gz && \
+    wget -O nginx-rtmp-module-${RTMP_MODULE_VERSION}.tar.gz https://github.com/arut/nginx-rtmp-module/archive/v${RTMP_MODULE_VERSION}.tar.gz && \
+    tar -zxf nginx-${NGINX_VERSION}.tar.gz && \
+    tar -zxf nginx-rtmp-module-${RTMP_MODULE_VERSION}.tar.gz
 
-WORKDIR /
-# RUN useradd -ms /bin/bash admin
-# RUN chown -R admin:admin /mnt
-# USER root
-RUN chmod -R 755 /mnt
-# RUN echo $(ls -l /mnt)
-# USER www-data
-# RUN chown -R :nginx /mnt
-# USER admin
+# build and install nginx with nginx-rtmp-module, clear working directory after build
+# Edit this line if you want to add more modules or change options.
+RUN cd nginx-${NGINX_VERSION} && \
+    ./configure \
+    --sbin-path=/usr/local/sbin/nginx \
+    --conf-path=/etc/nginx/nginx.conf \
+    --error-log-path=/var/log/nginx/error.log \
+    --pid-path=/var/run/nginx/nginx.pid \
+    --lock-path=/var/lock/nginx/nginx.lock \
+    --http-log-path=/var/log/nginx/access.log \
+    --http-client-body-temp-path=/tmp/nginx-client-body \
+    --with-http_ssl_module \
+    --with-cc-opt="-Wimplicit-fallthrough=0" \
+    --with-file-aio \
+    --with-threads \
+    --add-module=../nginx-rtmp-module-${RTMP_MODULE_VERSION} && \
+    make -j $(getconf _NPROCESSORS_ONLN) && \
+    make install && \
+    mkdir /var/lock/nginx && \
+    # clear working directory after build
+    rm -rf /tmp/build
 
-EXPOSE 8080 1935
+# forward access and error logs to docker log collector
+RUN ln -sf /dev/stdout /var/log/nginx/access.log && \
+    ln -sf /dev/stderr /var/log/nginx/error.log
+
+# copy local nginx.conf to docker
+COPY conf/nginx.conf /etc/nginx/nginx.conf
+
+# export 1935 for rtmp, 8080 for hls or dash
+EXPOSE 1935 8080
+
+CMD ["nginx", "-g", "daemon off;"]
