--- a/media_server/nginx.conf
+++ b/media_server/nginx.conf
@@ -2,6 +2,7 @@ user nginx nginx;
 worker_processes auto;
 rtmp_auto_push on;
 events {}
+
 rtmp {
     server {
         listen 1935;
@@ -54,6 +55,22 @@ http {
         }
 
         location /hls {
+            # Disable cache
+            add_header 'Cache-Control' 'no-cache';
+
+            # CORS setup
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Expose-Headers' 'Content-Length';
+
+            # allow CORS preflight requests
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+
             # Serve HLS fragments
             types {
                 application/vnd.apple.mpegurl m3u8;
