move dir and add docker-compose

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,1 +1,8 @@
 FROM ubuntu:18.04
+
+COPY . /backend
+WORKDIR /backend
+RUN pip install -r requirements.txt
+
+EXPOSE 8989
+CMD ["python", "app.py"]
