--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,11 +4,11 @@ RUN apt-get install -y python3 python3-pip python3-dev build-essential
 RUN ln -s /usr/bin/python3 /usr/bin/python
 RUN ln -s /usr/bin/pip3 /usr/bin/pip
 
-COPY . /backend
 WORKDIR /backend
-
+COPY ./requirements.txt .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
+COPY . /backend
 
 EXPOSE 8989
 CMD ["python", "app.py"]
