add sleep to start stream endpoint

--- a/media_server/nginx.conf
+++ b/media_server/nginx.conf
@@ -13,13 +13,13 @@ rtmp {
             record off;
 
             hls on;
-            hls_path /tmp/hls;
+            hls_path /mnt/hls;
             hls_nested on;
             hls_fragment 2s;
             hls_playlist_length 16s;
 
             dash on;
-            dash_path /tmp/dash;
+            dash_path /mnt/dash;
             dash_nested on;
             dash_fragment 2s;
             dash_playlist_length 16s;
@@ -76,13 +76,13 @@ http {
                 application/vnd.apple.mpegurl m3u8;
                 video/mp2t ts;
             }
-            root /tmp;
+            root /mnt;
             add_header Cache-Control no-cache;
         }
 
         location /dash {
             # Serve DASH fragments
-            root /tmp;
+            root /mnt;
             add_header Cache-Control no-cache;
         }
     }
