--- a/media_server/nginx.conf
+++ b/media_server/nginx.conf
@@ -18,11 +18,11 @@ rtmp {
             hls_fragment 2s;
             hls_playlist_length 16s;
 
-            dash on;
-            dash_path /mnt/dash;
-            dash_nested on;
-            dash_fragment 2s;
-            dash_playlist_length 16s;
+            # dash on;
+            # dash_path /mnt/dash;
+            # dash_nested on;
+            # dash_fragment 2s;
+            # dash_playlist_length 16s;
 
             # deny play all;
         }
@@ -80,10 +80,10 @@ http {
             add_header Cache-Control no-cache;
         }
 
-        location /dash {
-            # Serve DASH fragments
-            root /mnt;
-            add_header Cache-Control no-cache;
-        }
+        # location /dash {
+        #     # Serve DASH fragments
+        #     root /mnt;
+        #     add_header Cache-Control no-cache;
+        # }
     }
 }
