--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
       - "mode=standalone"
     ports:
       - 6379:6379
+    networks:
+      - proxynet
 
   redis-commander:
     image: rediscommander/redis-commander:latest
@@ -44,6 +46,8 @@ services:
     hostname: redis-commander
     restart: always
     environment:
-    - REDIS_HOSTS=local:redis:6379
+    - REDIS_HOSTS=redis
     ports:
     - "8081:8081"
+    networks:
+      - proxynet
