print both access.log and stdout

--- a/media_server/nginx.conf
+++ b/media_server/nginx.conf
@@ -30,6 +30,8 @@ rtmp {
 }
 
 http {
+    access_log on;
+    error_log on;
     sendfile off;
     aio on;
     directio 512;
@@ -85,5 +87,11 @@ http {
         #     root /mnt;
         #     add_header Cache-Control no-cache;
         # }
+
+        access_log /var/log/nginx/access.log;
+        access_log /dev/stdout;
+        error_log /var/log/nginx/error.log;
+        error_log /dev/stderr;
+
     }
 }
