--- a/media_server/Dockerfile
+++ b/media_server/Dockerfile
@@ -46,8 +46,9 @@ RUN cd nginx-${NGINX_VERSION} && \
     rm -rf /tmp/build
 
 # forward access and error logs to docker log collector
-RUN ln -sf /dev/stdout /var/log/nginx/access.log && \
-    ln -sf /dev/stderr /var/log/nginx/error.log
+# RUN ln -sf /dev/stdout /var/log/nginx/access.log && \
+#     ln -sf /dev/stderr /var/log/nginx/error.log
+
 
 # copy local nginx.conf to docker
 COPY ./nginx.conf /etc/nginx/nginx.conf
