--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - "8080:8080"
     networks:
       - proxynet
+    volumes:
+      - "./media_server/logs:/var/log/nginx"
 
   redis:
     image: redis:alpine
