fix logger to rotatingFileHandler

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - proxynet
     volumes:
       - "./media_server/logs:/var/log/nginx"
+      - "./media_server/logs/stream_manager.log:/logs/stream_manager.log"
 
   redis:
     image: redis:alpine
