--- a/media_server/Dockerfile
+++ b/media_server/Dockerfile
@@ -52,14 +52,20 @@ RUN cd nginx-${NGINX_VERSION} && \
 RUN ln -s /usr/bin/python3 /usr/bin/python
 RUN ln -s /usr/bin/pip3 /usr/bin/pip
 
+# timezone setting
 RUN apk add --no-cache tzdata
 ENV TZ=Asia/Seoul
 
 # copy local nginx.conf to docker
 COPY ./nginx.conf /etc/nginx/nginx.conf
 
+COPY ./requirements.txt .
+# RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
+
+COPY ./logger.py .
 COPY ./stream_manager.py /stream_manager.py
-RUN python /stream_manager.py &
+RUN python /stream_manager.py
 
 # export 1935 for rtmp, 8080 for hls or dash
 EXPOSE 1935 8080
