fix docker stream

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     volumes:
       - "./media_server/logs:/var/log/nginx"
       - "./media_server/logs:/logs"
+    command: nginx && python /stream_manager.py
 
   redis:
     image: redis:alpine
